<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_first_screen">Menu pilihan</string>
    <string name="subtitle_first_screen">Mulai hidup sehat dengan menerapkan pola makan yang sehat</string>
    <string name="next">Berikutnya</string>
    <string name="title_second_screen">Tutorial Memasak</string>
    <string name="subtitle_second_screen">Temukan tutorial masak yang sesuai dengan kategori yang kamu ingingkan</string>
    <string name="title_third_screen">Pesan Bahan</string>
    <string name="subtitle_third_screen">Kami sediakan bahan yang sesuai dengan takaran dari tutorial masak kami</string>
    <string name="title_fourth_screen">Antar Bahan</string>
    <string name="subtitle_fourth_screen">Kami antarkan bahan masakan sampai kedepan rumahmu</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="skip">Lewati untuk saat ini</string>
    <string name="splash_subtitle">There is no more sincere love than the love for food</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="or">atau</string>
    <string name="login_google">Masuk dengan akun Google</string>
    <string name="have_no_account">Tidak punya akun?</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="address">Alamat</string>
    <string name="have_an_account">Sudah punya akun?</string>
    <string name="title_home">Home</string>


    <string name="your_location">Lokasimu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Kategori</string>
    <string name="popular_menu">Menu Populer</string>
    <string name="see_all">Lihat Semua ></string>
    <string name="exclusive_menu">Menu Ekslusif</string>
    <string name="home">Home</string>
    <string name="voucher">Voucher</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="availability">Ketersediaan Bahan</string>
    <string name="ingredients">Bahan-bahan:</string>
    <string name="steps">Langkah-langkah:</string>
    <string name="title_menu_description">Deskripsi Masakan</string>
    <string name="estimate_time">Estimasi Waktu</string>
    <string name="benefit">Benefit yang didapat</string>
    <string name="title_number_of_rating">Ringkasan Penilaian</string>
    <string name="title_list_of_review">Daftar Penilaian</string>
    <string name="message_empty_notification">Belum ada notifikasi yang tersedia</string>
    <string name="message_empty_favorite">Belum menambahakan apapun dalam favorit kamu</string>
    <string name="title_top_up">Isi Saldo</string>
    <string name="rank_poin">Rank Poin</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="location">Alamatku</string>
    <string name="history">Riwayat Pesanan</string>
    <string name="account">Akun</string>
    <string name="other">Lainnya</string>
    <string name="cookiez_wallet">Cookiez Wallet</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_profile">Ubah Profil</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="information">Information</string>
    <string name="desc_dialog_voucher">Terus tingkatkan pesananmu untuk mendapat tambahan Coin Poin yang bisa kamu tukar dengan beragam Voucher menarik yang ada.</string>
    <string name="desc_dialog_rank">Saat ini anda berada pada peringkat ke %d. Terus tingkatkan pesananmu untuk mendapat tambahan poin XP.</string>
    <string name="ok">OK</string>
    <string name="diet_menu">Menu Diet</string>
    <string name="sample_name">Kylix Eza Saputra</string>
    <string name="sample_email">kylixeza.dev@gmail.com</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_indonesian">Tantangan</string>
    <string name="note">Note</string>
    <string name="challenge_headline">Yuk, cari tau kebutuhan kalorimu di sini</string>
    <string name="oresor">Oresor</string>
    <string name="weight">Berat badan</string>
    <string name="weight_unit">kg</string>
    <string name="height">Tinggi badan</string>
    <string name="height_unit">cm</string>
    <string name="daily_calories">Kalori kebutuhan harian</string>
    <string name="calories_unit">kal</string>
    <string name="reminder">Setel pengingat untuk mencatat</string>
    <string name="see_notes">Lihat catatan</string>
    <string name="challenge_tagline">Mulai tantangan hidup sehatmu!</string>
    <string name="success_get">Berhasil tercatat, kamu\nmendapatkan</string>
    <string name="challenge_success_tagline">Tetap konsisten dalam memenuhi diet ya, semangat!!!</string>
    <string name="breakfast">Sarapan</string>
    <string name="lunch">Makan siang</string>
    <string name="dinner">Makan malam</string>
    <string name="age">Umur</string>
    <string name="age_unit">th</string>
    <string name="date">Tanggal</string>
    <string name="food_name">Nama makanan</string>
    <string name="portions">Jumlah porsi</string>
    <string name="description">Keterangan</string>
    <string name="note_verification">Apakah data yang diisikan sudah benar?</string>
    <string name="save">Simpan</string>
    <string name="calories_tagline">Jumlah kalori pada makanan anda adalah</string>
    <string name="calories_get_sample">650 kal</string>
    <string name="suggestion_sample">Kamu disarankan untuk terus menjaga pola makan sehat dan perbanyak minum air putih</string>
    <string name="date_sample">12 Mar 2022</string>
    <string name="graphic_of_daily_calories">Grafik Total Kalori Harian</string>
    <string name="daily_kal_sample">917 kal</string>
    <string name="xp">XP</string>
    <string name="my_rank">Peringkatku</string>
    <string name="leaderboard">Leaderboard</string>
</resources>