<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_challenge"
        android:title="@string/challenge"
        android:enabled="true"
        android:icon="@drawable/ic_challenge"
        />

    <item
        android:id="@+id/navigation_note"
        android:title="@string/note"
        android:icon="@drawable/ic_fab_custom_design"/>

    <item
        android:id="@+id/navigation_voucher"
        android:title="@string/voucher"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        />

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"/>

</menu>