<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.onboard.screen.fourth.FourthScreenFragment">

    <ImageView
        android:id="@+id/iv_icon_fourth_screen"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon_fourth_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title_third_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title_fourth_screen"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_fourth_screen" />

    <TextView
        android:id="@+id/tv_subtitle_third_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_fourth_screen"
        android:textSize="16sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_third_screen"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_login"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@color/white"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_register"
        app:layout_constraintTop_toTopOf="@id/btn_register"
        app:strokeColor="@color/primary" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>