<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    app:cardCornerRadius="8dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="16dp"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_oresor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oresor"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/weight"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_oresor"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_weight_unit"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/weight_unit"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_weight"
            app:layout_constraintBottom_toBottomOf="@id/tv_weight"/>

        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tv_weight"
            app:layout_constraintTop_toTopOf="@id/tv_weight"
            app:layout_constraintBottom_toBottomOf="@id/tv_weight"
            app:layout_constraintEnd_toStartOf="@id/tv_weight_unit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        </EditText>

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/height"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_weight"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_height_unit"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/height_unit"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_height"
            app:layout_constraintBottom_toBottomOf="@id/tv_height"/>

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/edt_weight"
            app:layout_constraintTop_toTopOf="@id/tv_height"
            app:layout_constraintBottom_toBottomOf="@id/tv_height"
            app:layout_constraintEnd_toEndOf="@id/edt_weight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        </EditText>

        <TextView
            android:id="@+id/tv_daily_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/daily_calories"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_height"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_calories_unit"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/calories_unit"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_daily_calories"
            app:layout_constraintBottom_toBottomOf="@id/tv_daily_calories"/>

        <EditText
            android:id="@+id/edt_daily_calories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/edt_height"
            app:layout_constraintEnd_toEndOf="@id/edt_height"
            app:layout_constraintTop_toTopOf="@id/tv_daily_calories"
            app:layout_constraintBottom_toBottomOf="@id/tv_daily_calories"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        </EditText>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>