<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.note.NoteFragment">

    <include
        android:id="@+id/include_app_bar_note"
        layout="@layout/include_app_bar_middle"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_note_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/include_app_bar_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:tabBackground="@drawable/tab_selector"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />


    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fake_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_pick_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/date"
        app:startIconDrawable="@drawable/ic_challenge"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/cv_note_holder"
        app:layout_constraintTop_toBottomOf="@id/cv_note_holder"
        app:layout_constraintEnd_toEndOf="@id/cv_note_holder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_food_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/food_name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edt_pick_date"
        app:layout_constraintTop_toBottomOf="@id/edt_pick_date"
        app:layout_constraintEnd_toEndOf="@id/edt_pick_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_portion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/portions"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edt_food_name"
        app:layout_constraintTop_toBottomOf="@id/edt_food_name"
        app:layout_constraintEnd_toEndOf="@id/edt_food_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edt_portion"
        app:layout_constraintTop_toBottomOf="@id/edt_portion"
        app:layout_constraintEnd_toEndOf="@id/edt_portion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_note_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note_verification"
        android:fontFamily="@font/poppins_light"
        android:textSize="10sp"
        android:buttonTint="@color/primary"
        app:layout_constraintStart_toStartOf="@id/edt_description"
        app:layout_constraintTop_toBottomOf="@id/edt_description">
    </com.google.android.material.checkbox.MaterialCheckBox>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:includeFontPadding="true"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_note_verification"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>